# FCCurop

./: data_fixedangles.py  simpleplotter.py
tools/: CMakeLists.txt  Lb2L0mm.json  Lb2L0mm_fccanalyses.json  Lb2L0mm_phsp.json  Lb2L0mm_rapidsim.json  README.md
tools/apps/: CMakeLists.txt  angles.cc
tools/include/: ReadTree.hh  tools.hh
tools/src/: CMakeLists.txt  ReadTree.cc  jsoncpp.cc  tools.cc
